[package]
name = "bevy_spritesheet_animation"
version = "3.1.0"
description = "A Bevy plugin for animating sprites"
repository = "https://github.com/merwaaan/bevy_spritesheet_animation"
readme = "README.md"
license = "MIT"
keywords = ["bevy", "sprite", "animation"]
categories = ["game-development"]
edition = "2024"
resolver = "3"
exclude = ["assets/example.gif", "assets/example3d.gif"]

[features]
default = ["3d"]
custom_cursor = ["bevy/bevy_winit", "bevy/custom_cursor"]
3d = ["bevy/bevy_pbr"]

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_log",
  "bevy_sprite",
  "bevy_pbr",
  "bevy_ui",
] }

[dev-dependencies]
approx = "0.5.1"
bevy = { version = "0.16.0", default-features = true }
clap = { version = "4.5.16", features = ["derive"] }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", rev = "8e6dd6072c2e093b5353f62970e55304175dbe8f" }
rand = "0.9"

[profile.test]
inherits = "release"

[lints]
clippy.type_complexity = "allow"
